adding photodiode square

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
   </head>
   <body>
-    <main>
-    </main>
+    <main id="canvas-container"></main>
+    <script src="objects.js"></script>
+    <script src="photodiode.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
