logger object for saving json locally

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <main id="canvas-container"></main>
     <script src="objects.js"></script>
+    <script src="logger.js"></script>
     <script src="photodiode.js"></script>
     <script src="sketch.js"></script>
   </body>
