--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="objects.js"></script>
     <script src="logger.js"></script>
     <script src="photodiode.js"></script>
+    <script src="experiment.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
