controller interface for keyboard, mouse, or usb controller

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="objects.js"></script>
     <script src="logger.js"></script>
     <script src="photodiode.js"></script>
+    <script src="gamepad.js"></script>
+    <script src="unified_controller.js"></script>
+    <script src="task_controls.js"></script>
     <script src="experiment.js"></script>
     <script src="sketch.js"></script>
   </body>
