integrating with websockets server

--- a/gamepad.html
+++ b/gamepad.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="p5.js"></script>
+    <script src="static/p5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
   </head>
   <body>
     <main id="canvas-container"></main>
-    <script src="gamepad.js"></script>
-    <script src="gamepad_sketch.js"></script>
+    <script src="static/gamepad.js"></script>
+    <script src="static/gamepad_sketch.js"></script>
   </body>
 </html>
