--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="p5.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="static/p5.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="static/style.css">
     <meta charset="utf-8" />
 
   </head>
   <body>
     <main id="canvas-container"></main>
-    <script src="objects.js"></script>
-    <script src="logger.js"></script>
-    <script src="photodiode.js"></script>
-    <script src="gamepad.js"></script>
-    <script src="unified_controller.js"></script>
-    <script src="task_controls.js"></script>
-    <script src="experiment.js"></script>
-    <script src="sketch.js"></script>
+    <script src="static/objects.js"></script>
+    <script src="static/ws_logger.js"></script>
+    <script src="static/photodiode.js"></script>
+    <script src="static/gamepad.js"></script>
+    <script src="static/unified_controller.js"></script>
+    <script src="static/task_controls.js"></script>
+    <script src="static/experiment.js"></script>
+    <script src="static/sketch.js"></script>
   </body>
 </html>
